--- a/index.qmd
+++ b/index.qmd
@@ -47,6 +47,7 @@ library(spData)
 library(lubridate)
 library(viridis)
 library(RColorBrewer)
+library(tidyr)
 getwd()
 cardinal_flower <- read.csv("cardinal_flower_nat.csv")
 
@@ -61,16 +62,93 @@ cardinal_flower <- cardinal_flower %>%
 
 cf2010 <- cardinal_flower %>%
   filter(year == 2010) %>%
-  mutate(year_day = yday(observed_on))
-
-cf2010 <- cf2010 %>%
   mutate(cfmean2010 = mean(year_day, na.rm = TRUE)) 
 
-mean_card_fl <- full_join(cardinal_flower, cf2010) 
+mean_card_fl <- full_join(cardinal_flower, cf2010)
 
 mean_card_fl <- mean_card_fl %>%
-  mutate(cfmean2010 = ifelse(is.na(cfmean2010), 233.375, cfmean2010)) %>%
-  mutate(difference = year_day - cfmean2010)
+  mutate(cfmean2010 = ifelse(is.na(cfmean2010), 178.3846, cfmean2010))
+
+cfmean2011 <- mean_card_fl %>%
+  filter(year == 2011) %>%
+  mutate(cfmean2011 = mean(year_day, na.rm = TRUE))
+
+cfmean2012 <- mean_card_fl %>%
+  filter(year == 2012) %>%
+  mutate(cfmean2012 = mean(year_day, na.rm = TRUE))
+
+cfmean2013 <- mean_card_fl %>%
+  filter(year == 2013) %>%
+  mutate(cfmean2013 = mean(year_day, na.rm = TRUE))
+
+cfmean2014 <- mean_card_fl %>%
+  filter(year == 2014) %>%
+  mutate(cfmean2014 = mean(year_day, na.rm = TRUE))
+
+cfmean2015 <- mean_card_fl %>%
+  filter(year == 2015) %>%
+  mutate(cfmean2015 = mean(year_day, na.rm = TRUE))
+
+cfmean2016 <- mean_card_fl %>%
+  filter(year == 2016) %>%
+  mutate(cfmean2016 = mean(year_day, na.rm = TRUE))
+
+cfmean2017 <- mean_card_fl %>%
+  filter(year == 2017) %>%
+  mutate(cfmean2017 = mean(year_day, na.rm = TRUE))
+
+cfmean2018 <- mean_card_fl %>%
+  filter(year == 2018) %>%
+  mutate(cfmean2018 = mean(year_day, na.rm = TRUE))
+
+cfmean2019 <- mean_card_fl %>%
+  filter(year == 2019) %>%
+  mutate(cfmean2019 = mean(year_day, na.rm = TRUE))
+
+cfmean2020 <- mean_card_fl %>%
+  filter(year == 2020) %>%
+  mutate(cfmean2020 = mean(year_day, na.rm = TRUE))
+
+cfmean2021 <- mean_card_fl %>%
+  filter(year == 2021) %>%
+  mutate(cfmean2021 = mean(year_day, na.rm = TRUE))
+
+cfmean2022 <- mean_card_fl %>%
+  filter(year == 2022) %>%
+  mutate(cfmean2022 = mean(year_day, na.rm = TRUE))
+
+cfmean2023 <- mean_card_fl %>%
+  filter(year == 2023) %>%
+  mutate(cfmean2023 = mean(year_day, na.rm = TRUE))
+
+cfmean2024 <- mean_card_fl %>%
+  filter(year == 2024) %>%
+  mutate(cfmean2024 = mean(year_day, na.rm = TRUE))
+
+cfmean2025 <- mean_card_fl %>%
+  filter(year == 2025) %>%
+  mutate(cfmean2025 = mean(year_day, na.rm = TRUE))
+
+mean_card_fl <- mean_card_fl %>%
+  mutate(cfmean = case_when(
+    year == 2011 ~ "193.1176",
+    year == 2012 ~ "186.4643",
+    year == 2013 ~ "166.1282",
+    year == 2014 ~ "162.5152",
+    year == 2015 ~ "198.9559",
+    year == 2016 ~ "171.7606",
+    year == 2017 ~ "168.3232",
+    year == 2018 ~ "165.468",
+    year == 2019 ~ "175.7049",
+    year == 2020 ~ "175.8336",
+    year == 2021 ~ "176.8913",
+    year == 2022 ~ "166.3364",
+    year == 2023 ~ "163.6606",
+    year == 2024 ~ "178.0036",
+    year == 2025 ~ "167.9547"
+  )) %>%
+  mutate(cfmean = as.numeric(cfmean)) %>%
+  mutate(difference = cfmean - cfmean2010)
 
 rth_1995_2021 <- read.csv("RTH_1995_2021.csv")
 rth_2022_2025 <- read.csv("RTH_2022_2025.csv")
@@ -99,9 +177,9 @@ ggplot() + geom_sf(data = us) + geom_point(data = mean_card_fl, aes(x = longitud
 
 ggplot() + geom_sf(data = us) + geom_point(data = mean_ruby_throat, aes(x = Longitude, y = Latitude, color = difference)) 
 
-cpal <- colorNumeric(palette = "Blues", domain = mean_card_fl$difference, na.color = "#080808")
+cpal <- colorNumeric(palette = "mako", domain = mean_card_fl$difference, na.color = NA, reverse = TRUE)
 
-rpal <- colorNumeric(palette = "Reds", domain = mean_ruby_throat$difference, na.color = "#080808")
+rpal <- colorNumeric(palette = "inferno", domain = mean_ruby_throat$difference, na.color = NA)
 
 leaflet(mean_card_fl) %>%
   addProviderTiles(provider = "Esri") %>%
