--- a/index.qmd
+++ b/index.qmd
@@ -179,7 +179,7 @@ ggplot() + geom_sf(data = us) + geom_point(data = mean_card_fl, aes(x = longitud
 
 ggplot() + geom_sf(data = us) + geom_point(data = mean_ruby_throat, aes(x = Longitude, y = Latitude, color = difference)) 
 
-cpal <- colorNumeric(palette = "mako", domain = mean_card_fl$difference, na.color = NA, reverse = FALSE)
+cpal <- colorNumeric(palette = "mako", domain = mean_card_fl$difference, na.color = NA, reverse = TRUE)
 
 rpal <- colorNumeric(palette = "inferno", domain = mean_ruby_throat$difference, na.color = NA)
 
