--- a/index.qmd
+++ b/index.qmd
@@ -11,7 +11,7 @@ date-format: long
 
 \[\~ 200 words\]
 
-Clearly stated background and questions / hypotheses / problems being addressed. Sets up the analysis in an interesting and compelling way. Include figures if you like.
+Clearly stated background and questions / hypotheses / problems being addressed. Sets up the analysis in an interesting and compelling way. Include figures if you like. trying
 
 # Materials and methods
 
