--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Phenological Shifts in the Ruby-Throated Hummingbird and the Cardinal Flower"
+title: "Shifts in the Ruby-Throated Hummingbird and the Cardinal Flower"
 author: Aubrey Monaco
 subtitle: GEO511 Final Project
 format: html
